Frontend configured for production backend
- Updated environment files with actual Render backend URL
- Created .env.local for development (localhost:8000)
- Created .env.production for production (Render URL)
- Updated vercel.json with production backend URL
- Updated deployment instructions with deployed backend URL

✅ Frontend ready for Vercel deployment

🤖 Generated with [Memex](https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Frontend API Configuration
-REACT_APP_API_URL=https://your-backend-api.onrender.com
+REACT_APP_API_URL=https://line-lead-qsr-backend.onrender.com
 
 # Build Configuration
 GENERATE_SOURCEMAP=false
