Fix CORS for production domain linelead.io
- Updated CORS_ORIGINS to include https://linelead.io
- Updated both render.yaml files with correct domain
- Updated deployment instructions
- Backend will now accept requests from custom domain

🔧 CORS configuration fixed for https://linelead.io

🤖 Generated with [Memex](https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -9,5 +9,5 @@ services:
       - key: OPENAI_API_KEY
         sync: false
       - key: CORS_ORIGINS
-        value: "https://line-lead-qsr-assistant.vercel.app,http://localhost:3000"
+        value: "https://linelead.io,http://localhost:3000"
     healthCheckPath: "/health"
