--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       - key: OPENAI_API_KEY
         sync: false
       - key: CORS_ORIGINS
-        value: "https://line-lead-qsr-assistant.vercel.app,http://localhost:3000"
+        value: "https://linelead.io,http://localhost:3000"
       - key: PYTHON_VERSION
         value: "3.11"
     healthCheckPath: "/health"
