--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,8 @@
-# Production Environment
+# Production Environment  
 REACT_APP_API_URL=https://line-lead-qsr-backend.onrender.com
 
 # Production-specific settings
 GENERATE_SOURCEMAP=false
 REACT_APP_ENV=production
+
+# Updated for linelead.io deployment
