Implement ElevenLabs TTS with Rachel voice
- Replace browser TTS with ElevenLabs API for natural voice quality
- Implement direct API calls using fetch to avoid webpack issues
- Add fallback to browser TTS if ElevenLabs fails
- Maintain all existing TTS functionality and state management
- Preserve hands-free mode integration and streaming TTS
- Use Rachel voice (21m00Tcm4TlvDq8ikWAM) for professional female voice
- Add proper error handling and audio cleanup
- Include test file for TTS verification

🤖 Generated with [Memex](https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,9 @@
 # Local Development Environment
 REACT_APP_API_URL=http://localhost:8000
 
+# ElevenLabs API
+REACT_APP_ELEVENLABS_API_KEY=sk_2def0286786213b73e7b8a77a5c372e9a097179b47c7404e
+
 # Development-specific settings
 GENERATE_SOURCEMAP=true
 REACT_APP_ENV=development
