Implement middle school reading level system prompt
- Rewrote system prompt to use 6th-8th grade language
- Replaced complex business terms with simple restaurant words
- Added explicit instructions to avoid corporate formatting
- Updated demo responses to use simplified language
- Added OpenAI API key to test real responses

Note: Real API responses still showing corporate format despite
explicit instructions - suggests possible override elsewhere

🤖 Generated with [Memex](https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,9 @@
 # Local Development Environment
 REACT_APP_API_URL=http://localhost:8000
 
+# OpenAI API
+OPENAI_API_KEY=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
+
 # ElevenLabs API
 REACT_APP_ELEVENLABS_API_KEY=sk_2def0286786213b73e7b8a77a5c372e9a097179b47c7404e
 
