--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.115.13
 uvicorn==0.34.3
 python-multipart==0.0.20
 pydantic==2.11.7
+pydantic-ai==0.3.5
 PyPDF2==3.0.1
 aiofiles==24.1.0
 sentence-transformers==4.1.0
