Fix ElevenLabs API key configuration for production
- Added REACT_APP_ELEVENLABS_API_KEY to .env.production
- Added ELEVENLABS_API_KEY to render.yaml backend configuration
- Resolves 401 Unauthorized errors in production frontend TTS calls

🤖 Generated with [Memex](https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,9 @@
 # Production Environment  
 REACT_APP_API_URL=https://line-lead-qsr-backend.onrender.com
 
+# ElevenLabs API
+REACT_APP_ELEVENLABS_API_KEY=sk_3a5450aeb0b0f06a8e699cd6f0a958b87b86cac89ae27b7c
+
 # Production-specific settings
 GENERATE_SOURCEMAP=false
 REACT_APP_ENV=production
