✅ COMPLETE: Neo4j Aura Integration for RAG-Anything
AURA-SPECIFIC CONFIGURATION COMPLETE:
- Updated backend/.env.rag with real Aura instance details
- Neo4j URI: neo4j+s://57ed0189.databases.neo4j.io (SSL required)
- Created services/neo4j_service.py with Aura-optimized settings
- Added Aura validation endpoints and health checks
- Installed RAG packages: raganything, lightrag-hku
- Comprehensive testing in conservative mode

AURA SUCCESS CRITERIA MET:
✅ URI starts with 'neo4j+s://'
✅ Connection uses SSL encryption
✅ Timeout settings optimized for cloud latency
✅ Validation endpoint confirms Aura configuration
✅ Health check shows successful connection to cloud instance

NEW ENDPOINTS ADDED:
- GET /neo4j-aura-validation - Validate Aura config
- GET /neo4j-health - Aura health check
- GET /neo4j-test-query - Test Aura queries
- POST /neo4j-custom-query - Custom read-only queries

CONSERVATIVE ACTIVATION READY:
- All systems tested in development mode
- Full logging enabled for troubleshooting
- Fallback mechanisms preserved
- Zero breaking changes to existing functionality

Ready for gradual feature activation with comprehensive monitoring!

🤖 Generated with [Memex](https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/backend/.env.rag
+++ b/backend/.env.rag
@@ -1,8 +1,9 @@
-# RAG-Anything Configuration
+# RAG-Anything Configuration  
 USE_RAG_ANYTHING=false
-NEO4J_URI=neo4j://localhost:7687
+NEO4J_URI=neo4j+s://57ed0189.databases.neo4j.io
 NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=password
+NEO4J_PASSWORD=lOQ5gQFSW2WcCJhfRoJog6mV_ac_z8Gmf6POO-ra-EA
 RAG_STORAGE_PATH=./rag_storage
 RAG_DEBUG=true
 FALLBACK_TO_EXISTING=true
+USE_GRAPH_CONTEXT=false
