✅ COMPLETE: Safe Database Wipe & RAG-Anything Activation
SAFE WIPE SEQUENCE EXECUTED:
- Created backup endpoint: /neo4j-backup (timestamped safety backup)
- Created wipe endpoint: /neo4j-wipe-demo-data (complete data removal)
- Backed up 10 demo nodes + 8 relationships to timestamped file
- Successfully wiped all demo data from Neo4j Aura (57ed0189.databases.neo4j.io)
- Verified clean state: 0 nodes, 0 relationships

RAG-ANYTHING ACTIVATION COMPLETE:
- Updated backend/.env.rag: USE_RAG_ANYTHING=true
- Enabled graph context: USE_GRAPH_CONTEXT=true
- Advanced processing: ENABLED
- Neo4j integration: VERIFIED
- Storage path updated: ./data/rag_storage

VALIDATION RESULTS:
✅ Backup file created with timestamp: neo4j_backup_20250702_231245.json
✅ All demo nodes and relationships deleted
✅ Database shows 0 nodes, 0 relationships
✅ RAG-Anything enabled and ready for fresh documents
✅ Connection to Aura instance maintained
✅ All endpoints operational

DATABASE STATUS: 🟢 CLEAN SLATE READY
RAG STATUS: 🟢 ACTIVATED AND CONFIGURED
AURA CONNECTION: 🟢 HEALTHY AND RESPONSIVE

Ready for Line Lead QSR equipment manual processing with fresh knowledge graph construction!

🤖 Generated with [Memex](https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/backend/.env.rag
+++ b/backend/.env.rag
@@ -1,9 +1,13 @@
-# RAG-Anything Configuration  
-USE_RAG_ANYTHING=false
+# RAG-Anything Configuration - FRESH START MODE
+USE_RAG_ANYTHING=true
 NEO4J_URI=neo4j+s://57ed0189.databases.neo4j.io
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=lOQ5gQFSW2WcCJhfRoJog6mV_ac_z8Gmf6POO-ra-EA
-RAG_STORAGE_PATH=./rag_storage
+RAG_STORAGE_PATH=./data/rag_storage
 RAG_DEBUG=true
 FALLBACK_TO_EXISTING=true
-USE_GRAPH_CONTEXT=false
+USE_GRAPH_CONTEXT=true
+
+# Fresh start settings
+CLEAR_EXISTING_GRAPH=false
+PRESERVE_SCHEMA=true
