Update CORS configuration in config.py and render.yaml
- Added environment variable support for CORS_ORIGINS in config.py
- Updated render.yaml to include app.linelead.io in CORS_ORIGINS
- Ensures consistent CORS configuration across deployment environments

🤖 Generated with [Memex](https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
       - key: OPENAI_API_KEY
         sync: false
       - key: CORS_ORIGINS
-        value: "https://linelead.io,http://localhost:3000"
+        value: "https://app.linelead.io,https://linelead.io,http://localhost:3000"
       - key: PYTHON_VERSION
         value: "3.11"
     healthCheckPath: "/health"
