Fix CORS configuration for app.linelead.io domain
- Added https://app.linelead.io to CORS allowed origins
- Updated render.yaml CORS_ORIGINS environment variable
- Fixes production frontend connection blocked by CORS policy

🤖 Generated with [Memex](https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
       - key: ELEVENLABS_API_KEY
         sync: false
       - key: CORS_ORIGINS
-        value: "https://linelead.io,http://localhost:3000"
+        value: "https://app.linelead.io,https://linelead.io,http://localhost:3000"
       - key: PYTHON_VERSION
         value: "3.11"
     healthCheckPath: "/health"
