🚀 Clean Ragie Implementation
- Created main_clean.py without Neo4j/complex RAG dependencies
- Implemented clean Ragie service (ragie_service_clean.py)
- Fixed upload pipeline issue: documents now appear in manuals library
- Simple OpenAI integration for chat responses
- Tested end-to-end: upload → process → search → chat
- Maintains all existing API compatibility
- Graceful fallback when Ragie unavailable

✅ Upload working: test_qsr_manual.txt processed successfully
✅ Documents endpoint working: shows all uploaded files
✅ Chat working: finds relevant content from uploads
✅ Progress tracking working: real-time upload status

🤖 Generated with Memex (https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,10 @@
 # OpenAI API Configuration
 OPENAI_API_KEY=your-openai-api-key-here
 
+# Ragie Configuration (Clean Integration)
+RAGIE_API_KEY=your-ragie-api-key-here
+RAGIE_PARTITION=qsr_manuals
+
 # CORS Configuration for production
 CORS_ORIGINS=https://your-frontend-domain.vercel.app,http://localhost:3000
 
