Complete consolidation with production server testing
- Add missing Phase 3 server dependencies (slowapi)
- Update requirements.txt for production readiness
- Add comprehensive test suite for clean system
- Verify PydanticAI orchestration works end-to-end
- Confirm Phase 3 production server startup successful
- System fully consolidated and ready for deployment

🤖 Generated with [Memex](https://memex.tech)
Co-Authored-By: Memex <noreply@memex.tech>

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,5 +10,8 @@ numpy==2.0.2
 openai==1.91.0
 python-dotenv==1.1.1
 
+# Phase 3 Production Server Dependencies
+slowapi==0.1.9
+
 # Clean Ragie Integration
 ragie>=1.9.0
